# portfolio

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CNAME  Dockerfile  MILESTONES.md  README.md  config.py  docker-compose.yml  index.html  portfolio.yml  pyproject.toml  run_tests.py
.github/workflows/: deploy.yml  pr.yml
docs/: CONFIGURATION.md  DEPLOYMENT.md  README.md
src/: __init__.py  data.py  main.py  processing.py  views.py
static/css/: style.css
static/js/: main.js
templates/: index.html
tests/: test_data.py  test_main.py  test_skills_sort.py
tests/resources/: cache_test_portfolio.yml  invalid_portfolio.yml  malformed_portfolio.yml  test_portfolio.yml
