[project]
name = "portfolio"
version = "0.1.0"
description = "A modern, forkable portfolio website built with FastAPI and Jinja2"
authors = [
    {name = "Pedro Spinosa", email = "spinosaphb@gmail.com"},
]
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.1",
    "pydantic>=2.0.0",
]
requires-python = ">=3.11"
readme = "README.md"

[project.scripts]
portfolio = "src.main:app"
start = "src.main:main"
dev = "src.main:dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []
